Basic navigation between login and home screen

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "and": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
@@ -11,7 +12,9 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.0.0-beta.27",
+    "styled-components": "^3.0.2"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
