--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.0",
+    "react-native": "0.51.0",
+    "react-native-animatable": "^1.2.4",
     "react-native-elements": "^0.19.0",
+    "react-native-navigation": "^1.1.354",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.0.0-beta.27",
     "styled-components": "^3.0.2"
   },
   "devDependencies": {
