--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "and": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "debugger": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'"
   },
   "dependencies": {
     "react": "16.2.0",
@@ -15,6 +16,10 @@
     "react-native-elements": "^0.19.0",
     "react-native-navigation": "^1.1.354",
     "react-native-vector-icons": "^4.5.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-persist": "^5.5.0",
+    "redux-saga": "^0.16.0",
     "styled-components": "^3.0.2"
   },
   "devDependencies": {
