Prototype phone number login using redux-forms
[+] iOS status bar style using react-native-navigation with info.plist configuration

--- a/ios/rana/Info.plist
+++ b/ios/rana/Info.plist
@@ -37,7 +37,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<string>1</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSAppTransportSecurity</key>
