--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-persist": "^5.5.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.0.2"
