--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "email-validator": "^1.1.1",
     "react": "16.2.0",
     "react-native": "0.51.0",
     "react-native-animatable": "^1.2.4",
@@ -19,7 +20,6 @@
     "react-native-vector-icons": "^4.5.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.1",
     "redux-persist": "^5.5.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.0.2"
